@@ -3,6 +3,7 @@ NEXT
 	Use 'next-hop' instead of 'interface' in isis_topology
 	Replaced config parameter 'community' with 'communities'
 	Store all IPv6 addresses in lowercase (as recommended by RFC 5952)
+	Added support for Huawei NE-routers
 
 3.2 --	2014-04-09
 	* netaudit:
